# PhysKit

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  POOL_DEMO_CONTROLS.md  POOL_DEMO_PLAN.md  POOL_DEMO_TUNING.md  README.md  conanfile.py  gcc_profile
cmake/: EnsureClang.cmake  FetchMagnum.cmake  FilterCompileCommands.cmake
docs/: Doxyfile.in  coroutines.md
hooks/: pre-commit  run-format.sh
include/physkit/: accum.h  box.h  collision.h  constraint.h  detection.h  gjk.h  integrator.h  math_utils.h  mesh.h  obb.h  object.h  particle.h  physkit.h  sat.h  shape.h  sphere.h  world.h
include/physkit/algebra/: eigen_format.h  lin_alg.h  types.h
include/physkit/collision/: bounds.h  box.h  bvh.h  collision.h  collision_phases.h  constraint.h  mesh.h  shape.h  sphere.h
include/physkit/core/: accum.h  awaitables.h  co.h  integrator.h  object.h  particle.h  world.h
include/physkit/detail/: _generator_impl.h  arena.h  bounds.h  bvh.h  collision_phases.h  eigen_format.h  generator.h  gmf.h  integrate.h  lin_alg.h  macros.h  swappable_queue.h  types.h  util.h
src/: box.cpp  bvh.cpp  collision.cpp  eigen_format.h  gjk.cpp  mesh.cpp  physkit.cpp  sat.cpp  shape.cpp  sphere.cpp  world.cpp
src/modules/: bvh_m.cpp  collision_m.cpp  mesh_m.cpp  physkit-decl.cpp  physkit.cpp  shape_m.cpp  world_m.cpp
tests/: CMakeLists.txt  README.md
tests/co/: CMakeLists.txt  co_tests.cpp  missile_demo.cpp
tests/configs/: ball_box_pyr.json  billiards.json  collisions.json  domino_spiral.json  dominoes.json  plinko.json  pool_demo.json  rainbow_ziggurat.json  restitution_compare.json  stacking_blocks.json  tower_assault.json
tests/demo/: CMakeLists.txt  bounce_demo.cpp  config_demo.cpp  main.cpp
tests/dynamic_bvh/: CMakeLists.txt  main.cpp
tests/epa/: CMakeLists.txt  epa_test.cpp
tests/gjk/: CMakeLists.txt  gjk_test.cpp
tests/graphics_demo/: CMakeLists.txt  constraint_demo.cpp  debug_overlay.cpp  main.cpp  solar_system.cpp  track_demo.cpp
tests/graphics_test/: CMakeLists.txt  main.cpp
tests/helper/: test.h
tests/helper/dep/: argparse.hpp
tests/helper/graphics/: camera.h  convert.h  graphics.h
tests/helper/graphics/detail/: gmf.h  macro.h  magnum_headers.h
tests/helper/src/: camera.cpp  convert.cpp  graphics.cpp  magnum.cpp
tests/helper/src/modules/: camera_m.cpp  convert_m.cpp  graphics_m.cpp  magnum_m.cpp
tests/include/: camera.h  convert.h  debug_overlay.h  graphics.h  test.h
tests/include/dep/: argparse.hpp
tests/mesh/: CMakeLists.txt  main.cpp
tests/obb/: CMakeLists.txt  obb_test.cpp
tests/pool/: CMakeLists.txt  pool_demo.cpp
tests/shape/: CMakeLists.txt  main.cpp
util/: run-format.sh
